<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfirmacionDatos">

    <TableRow android:layout_margin="@dimen/table_rows_margin">
        <TextView
            android:width="@dimen/table_width_column"
            android:id="@+id/lblNombre"
            android:text="@string/lblNombre"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblResultadoNombre"
            android:text="@string/lblNombre"
            android:layout_column="1"/>
    </TableRow>

    <TableRow android:layout_margin="@dimen/table_rows_margin">
        <TextView
            android:width="@dimen/table_width_column"
            android:layout_width="150dp"
            android:id="@+id/lblFechaNacimiento"
            android:text="@string/lblFechaNacimiento"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblResultadoFechaNacimiento"
            android:text="@string/lblFechaNacimiento"
            android:layout_column="1"/>
    </TableRow>

    <TableRow android:layout_margin="@dimen/table_rows_margin">
        <TextView
            android:width="@dimen/table_width_column"
            android:id="@+id/lblTelefono"
            android:text="@string/lblTelefono"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblResultadoTelefono"
            android:text="@string/lblTelefono"
            android:layout_column="1"/>
    </TableRow>

    <TableRow android:layout_margin="@dimen/table_rows_margin">
        <TextView
            android:width="@dimen/table_width_column"
            android:id="@+id/lblCorreo"
            android:text="@string/lblCorreo"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblResultadoCorreo"
            android:text="@string/lblCorreo"
            android:layout_column="1"/>
    </TableRow>

    <TableRow android:layout_margin="@dimen/table_rows_margin">
        <TextView
            android:width="@dimen/table_width_column"
            android:id="@+id/lblDescripcion"
            android:text="@string/lblDescripcion"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/lblResultadoDescripcion"
            android:text="@string/lblDescripcion"
            android:layout_column="1"/>
    </TableRow>

    <TableRow android:layout_margin="@dimen/table_rows_margin">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoCorregirBtn"
            android:onClick="CorregirDatos"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>
